--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue.js Calendar</title>
+    <title>Vue.js Calendar By Matt H</title>
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/dist/style.css" media="screen" />
 </head>
 <body>
-    <div id="app">{{ msg }}</div>
+    <div id="app">
+        <app></app>
+    </div>
     <script src="/dist/web.bundle.js"></script>
 </body>
 </html>
